--- a/config/database.yml
+++ b/config/database.yml
@@ -12,22 +12,30 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql
-  database: eventicus_development
-  username: root
-  password: 1q2w3e4r
-  host: localhost
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
+  #adapter: mysql
+  #database: eventicus_development
+  #username: root
+  #password: 1q2w3e4r
+  #host: localhost
   encoding: utf8
 
 # Warning: The database defined as 'test' will be erased and
 # re-generated from your development database when you run 'rake'.
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql
-  database: eventicus_test
-  username: root
-  password: 1q2w3e4r
-  host: localhost
+  adapter: sqlite3
+  database: db/test.sqlite3
+  pool: 5
+  timeout: 5000
+  #adapter: mysql
+  #database: eventicus_test
+  #username: root
+  #password: 1q2w3e4r
+  #host: localhost
   encoding: utf8
 
 production:
