--- a/config/database.yml
+++ b/config/database.yml
@@ -37,7 +37,7 @@ test:
 
 production:
   adapter: sqlite3
-  database: db/development.sqlite3
+  database: db/production.sqlite3
   pool: 5
   timeout: 5000
   encoding: utf8
