--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,15 +5,18 @@ bob:
   login: bob
   password: 9a91e1d8d95b6315991a88121bb0aa9f03ba0dfc # test
   email: bob@bob.de
+  number_of_logins: 1
   
 existingbob:
   id: 1000002
   login: existingbob
   password: 9a91e1d8d95b6315991a88121bb0aa9f03ba0dfc # test
   email: existingbob@bob.de
+  number_of_logins: 10
   
 longbob:
   id: 1000003
   login: longbob
   password: 8e9b1a9a38e66ca572a5e8fdac8e256848842dfa # longtest
   email: longbob@bob.de
+  number_of_logins: 100
