--- a/test/fixtures/blogs.yml
+++ b/test/fixtures/blogs.yml
@@ -1,5 +1,9 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 one:
   id: 1
+  title: Test one
+  user_id: :bob
 two:
   id: 2
+  title: Test two
+  user_id: :bob
