--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -1,5 +1,13 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 one:
   id: 1
+  title: Event one
+  date_start: 2017-06-08 13:54:32
+  user_id: :bob
+  location_id: :one
 two:
   id: 2
+  title: Event two
+  date_start: 2017-06-08 13:54:32
+  user_id: :bob
+  location_id: :two
