--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -1,5 +1,9 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 one:
   id: 1
+  name: Test
+  metro_id: :one
 two:
   id: 2
+  name: Hamburg
+  metro_id: :two
